# Highload-Server

./: .gitignore  CMakeLists.txt  Connection.cpp  Connection.h  Data.cpp  Data.h  HTTPHandler.cpp  HTTPHandler.h  README.md  Server.cpp  Server.h  main.cpp
doc/: Highload Server UML.mdj
